Fixed animations visibility glitch

--- a/src/scss/frontend/_general.scss
+++ b/src/scss/frontend/_general.scss
@@ -33,3 +33,12 @@
 		margin-top: 0;
 	}
 }
+
+.ajs__element {
+	visibility: hidden;
+
+	&.animated {
+		visibility: visible;
+	}
+}
+
